--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600;700&display=swap');
 @import "tailwindcss";
+
 
 /* @import url('https://fonts.googleapis.com/css2?family=Tourney:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300..700;1,300..700&display=swap'); */
+
+
 
 * { 
   user-select: none;
@@ -443,6 +447,11 @@ code {
   overflow: hidden; /* Prevent content overflow */
   margin-top: 5vh;
 }
+
+.teko-font {
+  font-family: 'Teko', sans-serif;
+}
+
 
 /* Individual slide */
 .carousel-slide {
