--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Milker:wght@400;700&display=swap');
 @import "tailwindcss";
 
 
 /* @import url('https://fonts.googleapis.com/css2?family=Tourney:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300..700;1,300..700&display=swap'); */
+
+
+.font-milker {
+  font-family: 'Milker', sans-serif;
+}
 
 
 
